update DOM with li text when a user sends a message

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,6 @@
     <title>Websocket-Based Chat App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="app.js" defer></script>
 </head>
 <body>
     <div class="container text-center">
@@ -21,10 +19,13 @@
             </div>
         </form>
         <div class="col-12">
-            <ul id="messages" class="list-group mt-4">
+            <ul id="messages-container" class="list-group mt-4">
                 <!-- Starts empty, populated by app.js when messages are sent and received -->
             </ul>
         </div>
     </div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="app.js" defer></script>
 </body>
 </html>
