allow login with both username

--- a/public/index.html
+++ b/public/index.html
@@ -49,10 +49,10 @@
         <form id="login-form" class="row justify-content-center mt-4">
             <div class="col-6 d-flex gap-2">
             <input
-                type="email"
-                id="login-email"
+                type="text"
+                id="login-username-or-email"
                 class="form-control"
-                placeholder="Enter your email..."
+                placeholder="Enter your username or email..."
             />
             <input
                 type="password"
