--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,16 @@
   </head>
   <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end d-none">
+      <div class="user-info d-flex align-items-center gap-2">
+        <span id="current-user" class="text-muted"></span>
+        <a id="user-profile-link" href="#" class="">
+          <div id="user-avatar" class="avatar bg-secondary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 50px; height: 50px; font-size: 14px;"></div>
+        </a>
+        <a id="logout-btn" class="btn btn-outline-danger btn-sm">Logout</a>
+      </div>
+    </nav>
+    
     <div class="register-container d-none">
         <h2 class="text-center mt-5">Register</h2>
         <form id="register-form" class="row justify-content-center mt-4">
